# rsruckig

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.txt  README.md
bench/: Cargo.toml
bench/src/: benchmark_target.rs
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/rsruckig/: block.rs  brake.rs  calculator_target.rs  error.rs  input_parameter.rs  mod.rs  output_parameter.rs  position_first_step1.rs  position_first_step2.rs  position_second_step1.rs  position_second_step2.rs  position_third_step1.rs  position_third_step2.rs  profile.rs  result.rs  roots.rs  ruckig.rs  trajectory.rs  util.rs  velocity_second_step1.rs  velocity_second_step2.rs  velocity_third_step1.rs  velocity_third_step2.rs
samples/: Cargo.toml
samples/src/: example_1dof_custom_error.rs  example_position_1dof.rs  example_position_3_dynamic_dof.rs  example_position_3dof.rs  example_velocity_1dof.rs
src/rsruckig/: block.rs  brake.rs  calculator_target.rs  input_parameter.rs  mod.rs  output_parameter.rs  position_second_step1.rs  position_third_step1.rs  profile.rs  result.rs  ruckig.rs  trajectory.rs  util.rs  velocity_third_step1.rs
test_suite/: Cargo.toml
test_suite/tests/: tests.rs  tests_known.rs
tests/: tests.rs  tests_known.rs
