[package]
name = "rsruckig-benchmarks"
version = "0.1.0"
authors = ["Petri Koskinen"]
edition = "2021"

[[bin]]
name = "rsruckig-benchmark_target"
path = "src/benchmark_target.rs"

[dependencies]
gnuplot = "0.0.39"
rand_distr = "0.4.3"
rand_pcg = "0.3.1"
rand_core = "0.6.4"

[dependencies.rsruckig]
path = "../lib"
version = "0.1.2"
