[package]
name = "rsruckig"
authors = ["Petri Koskinen", "Lars Berscheid"]
license = "MIT"
readme = "../README.md"
version = "0.1.2"
edition = "2021"
description = "Ruckig motion planning library for Rust"
keywords = ["motion", "trajectory", "planning", "robotics", "automation"]
categories = ["science::robotics", "mathematics"]
homepage = "https://ruckig.com/"
repository = "https://github.com/petrikosk/rsruckig"
resolver = "2"

[dependencies]
typenum = "1.17"
arrayvec = "0.7.4"

[lib]
path = "src/rsruckig/mod.rs"
