[package]
name = "rsruckig"
authors = ["Petri Koskinen", "Lars Berscheid"]
license = "MIT"
readme = "../README.md"
version = "2.1.1"
edition = "2021"
description = "Ruckig motion planning library for Rust"
keywords = ["motion", "trajectory", "planning", "robotics", "automation"]
categories = ["science::robotics", "mathematics"]
homepage = "https://ruckig.com/"
repository = "https://github.com/petrikosk/rsruckig"
resolver = "2"

[features]
default = ["std"]

std = ["num-traits/std"]

alloc = []
libm = ["num-traits/libm"]

[dependencies]
arrayvec = {version = "0.7.4", default-features = false }
thiserror = {version = "2.0.12", default-features = false }

num-traits = { version = "0.2.19", default-features = false }

[lib]
path = "src/rsruckig/mod.rs"
