[package]
name = "rsruckig-samples"
version = "0.1.0"
authors = ["Petri Koskinen"]
edition = "2021"

[[bin]]
name = "example_position_1dof"
path = "src/example_position_1dof.rs"

[[bin]]
name = "example_position_3dof"
path = "src/example_position_3dof.rs"

[[bin]]
name = "example_velocity_1dof"
path = "src/example_velocity_1dof.rs"

[[bin]]
name = "example_position_1dof_custom_error_handler"
path = "src/example_1dof_custom_error.rs"

[[bin]]
name = "example_position_3_dynamic_dof"
path = "src/example_position_3_dynamic_dof.rs"


[dependencies]
rsruckig = { path = "../lib" }
log = "0.4.20"
log4rs = "1.2.0"
plotters = "0.3.7"
